--- a/kafka-demo/pom.xml
+++ b/kafka-demo/pom.xml
@@ -9,13 +9,13 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>flume-demo</artifactId>
+    <artifactId>kafka-demo</artifactId>
 
     <dependencies>
         <dependency>
-            <groupId>org.apache.flume</groupId>
-            <artifactId>flume-ng-core</artifactId>
-            <version>1.7.0</version>
+            <groupId>org.apache.kafka</groupId>
+            <artifactId>kafka-clients</artifactId>
+            <version>0.11.0.0</version>
         </dependency>
     </dependencies>
 
