--- a/pom.xml
+++ b/pom.xml
@@ -10,13 +10,8 @@
     <version>1.0-SNAPSHOT</version>
     <modules>
         <module>flume-demo</module>
+        <module>kafka-demo</module>
     </modules>
 
-    <dependencies>
-        <dependency>
-            <groupId>org.apache.kafka</groupId>
-            <artifactId>kafka-clients</artifactId>
-            <version>0.11.0.0</version>
-        </dependency>
-    </dependencies>
+
 </project>
